# Compilerbau1819

./: README.md  minijava.txt
lecture/: lists_problem.cup  lists_solution1.cup  lists_solution2.cup
src/Haskell/: Ast.hs  Backend.hs  Canon.hs  DirectedGraph.hs  Names.hs  Tree.hs  X86CodeGen.hs  X86Function.hs  X86Instr.hs  X86Prg.hs
src/MiniJava_Examples/Large/: GameOfLife.java  GameOfLifeAnim.java  Gunzip.java  Mandelbrot.java  MandelbrotAnim.java  Pi.java  README  Raytrace.java  RaytraceAndGauss.java
src/MiniJava_Examples/Medium/: BinarySearch.java  BinaryTree.java  BubbleSort.java  Euler.java  Fannkuch.java  Fib.java  FibL.java  Graph.java  Hanoi.java  LinearSearch.java  LinkedList.java  ManyArgs.java  Newton.java  PiSin.java  Primes.java  QuickSort.java
src/MiniJava_Examples/ShouldFail/: Scope.java
src/MiniJava_Examples/Small/: ArrayAccess.java  Circular.java  Effects.java  Factorial.java  Liveness.java  Precedence.java  Scope2.java  ShortCutAnd.java  Stck.java  Sum.java  TestEq.java  TrivialClass.java  While.java
src/Rust/: ast.rs  backend.rs  canonize.rs  graph.rs  ident.rs  main.rs  tree.rs
src/Rust/x86/: display.rs  mod.rs  x86backend.rs  x86codegen.rs  (+4 more)
src/Straightline/: README  build.gradle
tools/symb386/: Intel.hs  LICENSE  LexIntel.x  Main.hs  Names.hs  ParseIntel.y  Pretty.hs  README.md  Sim.hs  TokenIntel.hs  stack.yaml  symb386  symb386.cabal
tools/symb386/Examples/: ArrayAccess.before_regalloc.s  ArrayAccess.s  ArrayBounds.before_regalloc.s  ArrayBounds.s  BinarySearch.before_regalloc.s  BinarySearch.s  BinaryTree.before_regalloc.s  BinaryTree.s  Binding.before_regalloc.s  Binding.s  BubbleSort.before_regalloc.s  BubbleSort.s  Counter.before_regalloc.s  Counter.s  Div.before_regalloc.s  Div.s  E.s  Echo.s  Effects.before_regalloc.s  Effects.s  Euler.before_regalloc.s  Factorial.before_regalloc.s  Factorial.s  FactorialMem.before_regalloc.s  FactorialMem.s  Fib.before_regalloc.s  Fib.s  FibL.before_regalloc.s  FibL.s  Graph.before_regalloc.s  Inheritance.s  LinearSearch.before_regalloc.s  LinearSearch.s  LinkedList.before_regalloc.s  LinkedList.s  QuickSort.s  QuickSortOO.s  Stck.s  Sum.s  TreeVisitor.s  (+2 more)
tools/tree2c/: Cmm.hs  Lex.x  Main.hs  Makefile  Names.hs  Parse.y  README.md  Tokens.hs  Tree.hs  runtime.c  stack.yaml  tree2c  tree2c.cabal
(+107 files in other folders)
