name:           symb386
version:        0.0.20181112
build-type:     Simple
cabal-version:  >= 1.8
license:        BSD3
license-file:   LICENSE
author:         Andreas Abel (updated by Ulrich Schoepp, with contributions by 
                Robert Grabowski)
category:       Compilers/Interpreters, Education
synopsis:       Reduced instruction set i386 simulator
description:
  symb386 is a symbolic Intel(R) 386 assembler interpreter which
  allows infinitely many registers (temporaries).  Its purpose is
  to debug the output of a MiniJava compiler (from Andrew Appel's
  book, Modern Compiler Implementation in Java) before register
  allocation has been performed.
  .
  symb386 supports only a small fragment of i386 instructions.
  It expects its input to be a list of procedures in .intel_syntax
  each of which is started by a label and terminated by a return
  statement.
  .
  Control flow is restricted, so, only jumps to procedure-local
  labels are allowed.  Reading from an uninitialized memory location
  will lead to an exception.
tested-with:        GHC == 8.4.4

executable symb386
  hs-source-dirs:   .
  build-depends:    array >= 0.5 && < 0.6,
                    base >= 4.8,
                    containers >= 0.5.11 && < 0.7,
                    mtl >= 2.2 && < 2.3,
                    pretty >= 1.0 && < 1.2,
                    hashtables >= 1.2 && < 1.3,
                    exceptions >= 0.10 && < 0.11
  build-tools:      happy >= 1.19 && < 2,
                    alex >= 3.2 && < 4
  ghc-options:      -O2 -Wincomplete-patterns -funbox-strict-fields                
  extensions:       MultiParamTypeClasses
                    TypeSynonymInstances
                    FlexibleInstances
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    UndecidableInstances
                    ScopedTypeVariables
                    BangPatterns
                    PatternGuards
  main-is:          Main.hs
  other-modules:    Names
                    Pretty
                    Intel
                    Sim
                    TokenIntel                    
                    LexIntel
                    ParseIntel
